--- a/Lab3Algorithms/DESCRIPTION
+++ b/Lab3Algorithms/DESCRIPTION
@@ -5,3 +5,4 @@ Version: 1.0
 Date: 2022-09-05
 Author: Nikolaus Stratil-Sauer and Juan Manuel Pardo
 License: What license is it under?
+RoxygenNote: 7.2.1
