--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,4 +5,6 @@ Version: 1.0
 Date: 2022-09-05
 Author: Nikolaus Stratil-Sauer and Juan Manuel Pardo
 License: What license is it under?
+Description: Package for Lab3
+Maintainer: @nikostra and @jmparlad
 RoxygenNote: 7.2.1
