--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,5 +6,5 @@ Date: 2022-09-05
 Author: Nikolaus Stratil-Sauer and Juan Manuel Pardo
 License: What license is it under?
 Description: Package for Lab3
-Maintainer: @nikostra and @jmparlad
+Maintainer: Nikolaus Stratil-Sauer and Juan Manuel Pardo
 RoxygenNote: 7.2.1
