--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,7 @@ Type: Package
 Title: Euclidean and Dijkstra algorithms
 Version: 1.0
 Date: 2022-09-05
-Author: Nikolaus Stratil-Sauer <niko.stratil@gmail.com>
+Author: Nikolaus Stratil-Sauer <niko.stratil@gmail.com> , Juan Manuel Pardo <juapa351@student.liu.se>
 Maintainer: Nikolaus Stratil-Sauer <niko.stratil@gmail.com>
 License: GPL (>=2)
 Description: Package for Lab3.
